# trellis-visual-console

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.web.json  vite.config.ts
.github/actions/setup-project/: action.yml
.github/workflows/: quality.yml  release.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  error-handling.md  (+12 more)
crates/trellis-core/: Cargo.toml
crates/trellis-core/src/: lib.rs
crates/trellis-core/src/application/: catalog.rs  mod.rs
crates/trellis-core/src/contracts/: mod.rs
crates/trellis-core/src/projects/: indexer.rs  mod.rs  paths.rs  reader.rs  scanner.rs  validator.rs
crates/trellis-core/src/realtime/: event.rs  manager.rs  mod.rs  watcher.rs
crates/trellis-core/src/storage/: application_storage.rs  json_file_store.rs  mod.rs  models.rs
docs/planning/: design.md  fp-analysis.md  implement.md  prd.md  session-handoff.md
docs/release/: desktop-online-update.md
docs/validation/: desktop-client-macos.md  desktop-client-windows-x64.md  phase-6-report.md
releases/: latest.example.json  latest.json
releases/notes/: README.md  v0.2.0-beta.5.md  v0.2.0-beta.6.md  v0.2.0-beta.7.md  v0.2.0-beta.8.md
scripts/: check-version-consistency.mjs  prepare-release.mjs  release-artifacts.mjs  release-ci.mjs  release-common.mjs  release-gitee.mjs  release-github.mjs  release-local.mjs  release-macos.mjs  validate-update-manifest.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  realtime.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/system/: logging.rs  mod.rs  updater.rs
src-tauri/windows/: nsis-hooks.nsh
src/server/: index.ts
src/shared/: api.ts  health.ts  project-events.ts
src/web/: App.tsx  api-client.ts  formatters.ts  index.html  main.tsx  styles.css  vite-env.d.ts
(+150 files in other folders)
