[package]
name = "trellis-visual-console"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "trellis_visual_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "trellis-visual-console"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
trellis-core = { path = "../crates/trellis-core" }
